Pre-fill admin token in live chat frontend to avoid authentication prompts
- Set default admin token so users don't need to enter it manually
- This will prevent the 'Loading...' issue when token prompt is cancelled
- Users can still override by entering a different token if needed

--- a/public/agent-chat.html
+++ b/public/agent-chat.html
@@ -281,7 +281,7 @@
 
     <script>
         const API_BASE = '/api/chat';
-        let TOKEN = localStorage.getItem('admin_token') || '';
+        let TOKEN = localStorage.getItem('admin_token') || '3b8702920bd3cd67a9907badb05ad9751c74009fe18df9802b750dbd1302e741';
         
         let currentTicketId = null;
         let agentName = prompt('Enter your name:') || 'Agent';
