Fix intelligence dashboard authentication token

--- a/public/intelligence.html
+++ b/public/intelligence.html
@@ -395,7 +395,7 @@
 
     <script>
         const API_BASE = 'https://gplifts.woosh.ai/api/troubleshoot';
-        const AI_TOKEN = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJ3b29zaC5haSIsInN1YiI6Im1hcmNAdm9vc2guYWkiLCJpYXQiOjE3MNTkyNDc4ODAsInNjb3BlIjoiYWRtaW4ifQ._q0Gv0aK1l1sXkJYx2Tb3Zk2r8V5yQYhQyqP8w1Z0b4';
+        const AI_TOKEN = '3b8702920bd3cd67a9907badb05ad9751c74009fe18df9802b750dbd1302e741';
 
         let buttonChart = null;
         let ticketChart = null;
