Add Sentinel Enhanced Debug Routes and fix intelligence dashboard refresh rate

--- a/public/intelligence.html
+++ b/public/intelligence.html
@@ -740,8 +740,8 @@
         // Load data on page load
         loadAllData();
 
-        // Auto-refresh every 30 seconds
-        setInterval(loadAllData, 30000);
+        // Auto-refresh every 5 minutes
+        setInterval(loadAllData, 300000);
     </script>
 </body>
 </html>
